--- a/app/src/main/res/drawable/change_theme_orange.xml
+++ b/app/src/main/res/drawable/change_theme_orange.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/primarySecond" />
+    <solid android:color="@color/orange" />
     <corners
         android:radius="10dp" />
     <stroke
         android:width="3dp"
-        android:color="@color/primarySecond" />
+        android:color="@color/orange" />
 </shape>
