--- a/app/src/main/res/layout/activity_acitivity_page.xml
+++ b/app/src/main/res/layout/activity_acitivity_page.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor"
     android:orientation="vertical"
     tools:context=".activityPage">
 
@@ -289,29 +288,6 @@
                 app:layout_constraintStart_toStartOf="@+id/imageView22"
                 app:layout_constraintTop_toBottomOf="@+id/textView25" />
 
-            <ImageView
-                android:id="@+id/imageView27"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="300dp"
-                android:layout_marginTop="40dp"
-                android:visibility="invisible"
-                app:layout_constraintEnd_toEndOf="@+id/imageView22"
-                app:layout_constraintStart_toStartOf="@+id/imageView22"
-                app:layout_constraintTop_toTopOf="@+id/imageView22"
-                app:srcCompat="@drawable/circle_filled_shape" />
-
-            <ImageView
-                android:id="@+id/ivViewRecentAct"
-                android:layout_width="19dp"
-                android:layout_height="18dp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView27"
-                app:layout_constraintEnd_toEndOf="@+id/imageView27"
-                app:layout_constraintStart_toStartOf="@+id/imageView27"
-                app:layout_constraintTop_toTopOf="@+id/imageView27"
-                app:srcCompat="@drawable/arrow_right" />
-
             <TextView
                 android:id="@+id/tvActStepGoal"
                 android:layout_width="wrap_content"
@@ -347,6 +323,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+
+            <ProgressBar
+                android:id="@+id/pbActivityContent"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
