--- a/app/src/main/res/layout/activity_food_intake_tracker.xml
+++ b/app/src/main/res/layout/activity_food_intake_tracker.xml
@@ -57,7 +57,7 @@
         android:inputType="number"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/tertiaryDarkText"
+        android:textColor="@color/primaryText"
         android:textColorHint="@color/tertiaryDarkText"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
