--- a/app/src/main/res/layout/activity_water_goal_achieved_banner.xml
+++ b/app/src/main/res/layout/activity_water_goal_achieved_banner.xml
@@ -27,182 +27,183 @@
         app:layout_constraintTop_toTopOf="@+id/imageView69"
         app:srcCompat="@drawable/arrow_left_white" />
 
-    <TextView
-        android:id="@+id/textView124"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Goal Achieved! Congratulations"
-        android:textAlignment="center"
-        android:textColor="@color/whiteText"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imWaterBannerBack" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView124"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="Goal Achieved! Congratulations"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/whiteText"-->
+<!--        android:textSize="30sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imWaterBannerBack" />-->
 
-    <ImageView
-        android:id="@+id/imageView71"
-        android:layout_width="372dp"
-        android:layout_height="440dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.41"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView124"
-        app:srcCompat="@drawable/rectangle_shape" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView71"-->
+<!--        android:layout_width="372dp"-->
+<!--        android:layout_height="440dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.41"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView124"-->
+<!--        app:srcCompat="@drawable/rectangle_shape" />-->
 
-    <ImageView
-        android:id="@+id/imageView72"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toTopOf="@+id/imageView71"
-        app:srcCompat="@drawable/user_icon" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView72"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginStart="10dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/imageView71"-->
+<!--        app:srcCompat="@drawable/user_icon" />-->
 
-    <TextView
-        android:id="@+id/tvWaterBannerUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Username"
-        android:textColor="@color/primaryText"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageView71"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toTopOf="@+id/imageView71" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvWaterBannerUsername"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="Username"-->
+<!--        android:textColor="@color/primaryText"-->
+<!--        android:textSize="24sp"-->
+<!--        android:textStyle="bold"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView71"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/imageView71" />-->
 
-    <ImageView
-        android:id="@+id/imageView73"
-        android:layout_width="372dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView71"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toBottomOf="@+id/tvWaterBannerUsername"
-        app:srcCompat="@drawable/line_divider" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView73"-->
+<!--        android:layout_width="372dp"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView71"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tvWaterBannerUsername"-->
+<!--        app:srcCompat="@drawable/line_divider" />-->
 
-    <TextView
-        android:id="@+id/textView126"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Water Intake"
-        android:textColor="@color/primaryText"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView71"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toBottomOf="@+id/imageView73" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView126"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="Water Intake"-->
+<!--        android:textColor="@color/primaryText"-->
+<!--        android:textSize="16sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView71"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imageView73" />-->
 
-    <TextView
-        android:id="@+id/textView127"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="You took"
-        android:textColor="@color/primaryText"
-        android:textSize="21sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toBottomOf="@+id/textView126" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView127"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="116dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/poppins_semibold"-->
+<!--        android:text="You took"-->
+<!--        android:textColor="@color/primaryText"-->
+<!--        android:textSize="21sp"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView126" />-->
 
-    <TextView
-        android:id="@+id/tvWaterBannerTaken"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="0 ml"
-        android:textColor="@color/secondaryText"
-        android:textSize="21sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView71"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView127"
-        app:layout_constraintTop_toBottomOf="@+id/textView126" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvWaterBannerTaken"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/poppins_semibold"-->
+<!--        android:text="0 ml"-->
+<!--        android:textColor="@color/secondaryText"-->
+<!--        android:textSize="21sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView71"-->
+<!--        app:layout_constraintHorizontal_bias="0.0"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/textView127"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView126" />-->
 
-    <TextView
-        android:id="@+id/textView129"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_semibold"
-        android:text="of water today"
-        android:textColor="@color/primaryText"
-        android:textSize="21sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView71"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toBottomOf="@+id/textView127" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView129"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/poppins_semibold"-->
+<!--        android:text="of water today"-->
+<!--        android:textColor="@color/primaryText"-->
+<!--        android:textSize="21sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/imageView71"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView127" />-->
 
-    <ProgressBar
-        android:id="@+id/pbWaterBanner"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/circle_shape"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@drawable/circle_progress_bar_primary"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView129" />
+<!--    <ProgressBar-->
+<!--        android:id="@+id/pbWaterBanner"-->
+<!--        style="?android:attr/progressBarStyleHorizontal"-->
+<!--        android:layout_width="200dp"-->
+<!--        android:layout_height="200dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:background="@drawable/circle_shape"-->
+<!--        android:max="100"-->
+<!--        android:progress="0"-->
+<!--        android:progressDrawable="@drawable/circle_progress_bar_primary"-->
+<!--        android:textAlignment="center"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/textView129" />-->
 
-    <ImageView
-        android:id="@+id/imageView74"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pbWaterBanner"
-        app:srcCompat="@drawable/water_droplet_icon" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView74"-->
+<!--        android:layout_width="60dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/pbWaterBanner"-->
+<!--        app:srcCompat="@drawable/water_droplet_icon" />-->
 
-    <TextView
-        android:id="@+id/textView131"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="124dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="Daily Goal"
-        android:textColor="@color/tertiaryDarkText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView71"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView131"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="124dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="Daily Goal"-->
+<!--        android:textColor="@color/tertiaryDarkText"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/imageView71"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />-->
 
-    <TextView
-        android:id="@+id/tvWaterBannerGoal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="2,000"
-        android:textColor="@color/primaryText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/textView131"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvWaterBannerGoal"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="2,000"-->
+<!--        android:textColor="@color/primaryText"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/textView131"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />-->
 
-    <TextView
-        android:id="@+id/textView133"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_semi_bold"
-        android:text="ml"
-        android:textColor="@color/tertiaryDarkText"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/tvWaterBannerGoal"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView133"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:fontFamily="@font/outfit_semi_bold"-->
+<!--        android:text="ml"-->
+<!--        android:textColor="@color/tertiaryDarkText"-->
+<!--        android:textSize="12sp"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tvWaterBannerGoal"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/pbWaterBanner" />-->
+
 
     <Button
         android:id="@+id/btnWaterBannerShare"
@@ -216,7 +217,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView71" />
+        app:layout_constraintTop_toBottomOf="@+id/imBannerWaterAchievement" />
 
     <Button
         android:id="@+id/btnWaterBannerCancel"
@@ -231,18 +232,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnWaterBannerShare" />
 
-    <TextView
-        android:id="@+id/tvWaterBannerPercent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:fontFamily="@font/outfit_bold"
-        android:text="0%"
-        android:textColor="@color/secondaryText"
-        android:textSize="21sp"
-        app:layout_constraintEnd_toEndOf="@+id/pbWaterBanner"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/pbWaterBanner"
-        app:layout_constraintTop_toBottomOf="@+id/imageView74" />
+<!--    <TextView-->
+<!--        android:id="@+id/tvWaterBannerPercent"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:fontFamily="@font/outfit_bold"-->
+<!--        android:text="0%"-->
+<!--        android:textColor="@color/secondaryText"-->
+<!--        android:textSize="21sp"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/pbWaterBanner"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/pbWaterBanner"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imageView74" />-->
+
+    <ImageView
+        android:id="@+id/imBannerWaterAchievement"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/waterachievement"
+        tools:layout_editor_absoluteX="156dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
