--- a/app/src/main/res/layout/fragment_profile_calorie.xml
+++ b/app/src/main/res/layout/fragment_profile_calorie.xml
@@ -186,4 +186,14 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
         app:layout_constraintStart_toStartOf="@+id/imageView32"
         app:layout_constraintTop_toBottomOf="@+id/textView54" />
+
+    <ProgressBar
+        android:id="@+id/pbProfileCalorie"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView47" />
 </androidx.constraintlayout.widget.ConstraintLayout>
