--- a/app/src/main/res/layout/fragment_profile_sleep.xml
+++ b/app/src/main/res/layout/fragment_profile_sleep.xml
@@ -188,4 +188,14 @@
         app:layout_constraintStart_toStartOf="@+id/imageView37"
         app:layout_constraintTop_toBottomOf="@+id/textView63" />
 
+    <ProgressBar
+        android:id="@+id/pbProfileSleep"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView46" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
