--- a/app/src/main/res/layout/fragment_profile_water.xml
+++ b/app/src/main/res/layout/fragment_profile_water.xml
@@ -185,4 +185,14 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView28"
         app:layout_constraintStart_toStartOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/textView44" />
+
+    <ProgressBar
+        android:id="@+id/pbProfileWater"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView37" />
 </androidx.constraintlayout.widget.ConstraintLayout>
