--- a/app/src/main/res/layout/fragment_settings_change_password.xml
+++ b/app/src/main/res/layout/fragment_settings_change_password.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView84"
         android:layout_width="372dp"
-        android:layout_height="500dp"
+        android:layout_height="540dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,16 +27,15 @@
         app:srcCompat="@drawable/user_icon" />
 
     <TextView
-        android:id="@+id/tvSettingsUsername"
+        android:id="@+id/tvChangePassUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="Username"
+        android:fontFamily="@font/outfit_semi_bold"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintStart_toEndOf="@+id/imageView85"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toTopOf="@+id/imageView84" />
 
     <ImageView
@@ -46,7 +45,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/tvSettingsUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePassUsername"
         app:srcCompat="@drawable/line_divider_pink" />
 
     <TextView
@@ -55,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Account Settings"
         android:textColor="@color/tertiaryDarkText"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
@@ -67,7 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Edit Profile"
         android:textColor="@color/primaryText"
         android:textSize="18sp"
@@ -80,7 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Change Password"
         android:textColor="@color/primaryText"
         android:textSize="18sp"
@@ -88,7 +87,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView159" />
 
     <ImageView
-        android:id="@+id/imSettingsEditProfile"
+        android:id="@+id/imChangePassEditProfile"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
@@ -98,13 +97,13 @@
         app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
-        android:id="@+id/imSettingsChangePass"
+        android:id="@+id/imChangePassBack"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/imSettingsEditProfile"
+        app:layout_constraintTop_toBottomOf="@+id/imChangePassEditProfile"
         app:srcCompat="@drawable/arrow_down_icon" />
 
     <TextView
@@ -113,7 +112,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Enter Old Password"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
@@ -122,16 +121,20 @@
 
     <EditText
         android:id="@+id/etChangePassOldPass"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/text_field_bg_grey"
         android:ems="10"
         android:fontFamily="@font/poppins_light"
-        android:inputType="text"
+        android:hint="Current Password"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/textView26" />
 
@@ -141,7 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Enter New Password"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
@@ -150,16 +153,20 @@
 
     <EditText
         android:id="@+id/etChangePassNewPass"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/text_field_bg_grey"
         android:ems="10"
         android:fontFamily="@font/poppins_light"
-        android:inputType="text"
+        android:hint="New Password"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/textView30" />
 
@@ -169,7 +176,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Confirm Password"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
@@ -178,60 +185,45 @@
 
     <EditText
         android:id="@+id/etChangePassConfirmPass"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/text_field_bg_grey"
         android:ems="10"
         android:fontFamily="@font/poppins_light"
-        android:inputType="text"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
     <Button
         android:id="@+id/btnChangePassSave"
         android:layout_width="150dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/primary"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Save Changes"
         android:textColor="@color/btnText"
+        app:layout_constraintEnd_toEndOf="@+id/etChangePassConfirmPass"
+        app:layout_constraintStart_toStartOf="@+id/etChangePassConfirmPass"
+        app:layout_constraintTop_toBottomOf="@+id/etChangePassConfirmPass" />
+
+    <ProgressBar
+        android:id="@+id/pbChangePassSave"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:progressDrawable="@drawable/circle_progress_bar_primary"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toBottomOf="@+id/etChangePassConfirmPass" />
-
-    <ImageView
-        android:id="@+id/imChangePassOldPass"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/edit_icon"
-        app:layout_constraintStart_toEndOf="@+id/etChangePassOldPass"
-        app:layout_constraintTop_toBottomOf="@+id/textView26" />
-
-    <ImageView
-        android:id="@+id/imChangePassNewPass"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/edit_icon"
-        app:layout_constraintStart_toEndOf="@+id/etChangePassNewPass"
-        app:layout_constraintTop_toBottomOf="@+id/textView30" />
-
-    <ImageView
-        android:id="@+id/imChangePassConfirmPass"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/edit_icon"
-        app:layout_constraintStart_toEndOf="@+id/etChangePassConfirmPass"
-        app:layout_constraintTop_toBottomOf="@+id/textView34" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
