--- a/app/src/main/res/layout/fragment_settings_design.xml
+++ b/app/src/main/res/layout/fragment_settings_design.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView84"
         android:layout_width="372dp"
-        android:layout_height="500dp"
+        android:layout_height="520dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,16 +29,15 @@
         app:srcCompat="@drawable/user_icon" />
 
     <TextView
-        android:id="@+id/tvSettingsUsername"
+        android:id="@+id/tvDesignUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_medium"
-        android:text="Username"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintStart_toEndOf="@+id/imageView85"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toTopOf="@+id/imageView84" />
 
     <ImageView
@@ -48,7 +47,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/tvSettingsUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvDesignUsername"
         app:srcCompat="@drawable/line_divider_pink" />
 
     <TextView
@@ -103,7 +102,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView160" />
 
     <ImageView
-        android:id="@+id/imSettingsEditProfile"
+        android:id="@+id/imDesignEditProfile"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
@@ -113,23 +112,23 @@
         app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
-        android:id="@+id/imSettingsChangePass"
+        android:id="@+id/imDesignChangePass"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/imSettingsEditProfile"
+        app:layout_constraintTop_toBottomOf="@+id/imDesignEditProfile"
         app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
-        android:id="@+id/imSettingsNotifications"
+        android:id="@+id/imDesignNotification"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/imSettingsChangePass"
+        app:layout_constraintTop_toBottomOf="@+id/imDesignChangePass"
         app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
@@ -169,7 +168,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView162" />
 
     <ImageView
-        android:id="@+id/imSettingsChangeTheme"
+        android:id="@+id/imDesign"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
@@ -224,7 +223,7 @@
     <Button
         android:id="@+id/btnChangeThemeSave"
         android:layout_width="150dp"
-        android:layout_height="35dp"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/primary"
         android:text="Save Changes"
