--- a/app/src/main/res/layout/fragment_settings_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_settings_edit_profile.xml
@@ -7,9 +7,9 @@
     tools:context=".settingsFragment">
 
     <ImageView
-        android:id="@+id/imageView84"
+        android:id="@+id/imEditProfileBack"
         android:layout_width="372dp"
-        android:layout_height="380dp"
+        android:layout_height="550dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,31 +22,30 @@
         android:layout_height="60dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toTopOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toTopOf="@+id/imEditProfileBack"
         app:srcCompat="@drawable/user_icon" />
 
     <TextView
-        android:id="@+id/tvSettingsUsername"
+        android:id="@+id/tvEditProfileUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
-        android:text="Username"
+        android:fontFamily="@font/outfit_semi_bold"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintStart_toEndOf="@+id/imageView85"
-        app:layout_constraintTop_toTopOf="@+id/imageView84" />
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toTopOf="@+id/imEditProfileBack" />
 
     <ImageView
         android:id="@+id/imageView86"
         android:layout_width="372sp"
         android:layout_height="2sp"
         android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/tvSettingsUsername"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toBottomOf="@+id/tvEditProfileUsername"
         app:srcCompat="@drawable/line_divider_pink" />
 
     <TextView
@@ -55,10 +54,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Account Settings"
         android:textColor="@color/tertiaryDarkText"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/imageView86" />
 
     <TextView
@@ -67,20 +66,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Edit Profile"
         android:textColor="@color/primaryText"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/textView158" />
 
     <ImageView
-        android:id="@+id/imSettingsEditProfile"
+        android:id="@+id/imEditProfile"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/textView158"
         app:srcCompat="@drawable/arrow_down_icon" />
 
@@ -90,18 +89,17 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/outfit_medium"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Username:"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/textView159" />
 
     <EditText
         android:id="@+id/etEditProfileUsername"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/text_field_bg_grey"
         android:ems="10"
@@ -110,9 +108,11 @@
         android:inputType="text"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/tertiaryDarkText"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
     <TextView
@@ -120,64 +120,114 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/outfit_medium"
+        android:layout_marginTop="70dp"
+        android:fontFamily="@font/outfit_semi_bold"
         android:text="Email"
         android:textColor="@color/primaryText"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/etEditProfileUsername" />
 
     <EditText
         android:id="@+id/etEditProfileEmail"
-        android:layout_width="250dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="20dp"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/text_field_bg_grey"
         android:ems="10"
         android:fontFamily="@font/poppins_light"
-        android:hint="@string/email"
-        android:inputType="text"
+        android:hint="Enter New Email"
+        android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
-        android:textColor="@color/tertiaryDarkText"
-        android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
-        android:id="@+id/btnEditProfileSave"
+        android:id="@+id/btnEditProfileUsername"
         android:layout_width="150dp"
-        android:layout_height="35dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
         android:backgroundTint="@color/primary"
         android:fontFamily="@font/outfit_medium"
         android:text="Save Changes"
         android:textColor="@color/btnText"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintEnd_toEndOf="@+id/etEditProfileUsername"
+        app:layout_constraintStart_toStartOf="@+id/etEditProfileUsername"
+        app:layout_constraintTop_toBottomOf="@+id/etEditProfileUsername" />
+
+    <TextView
+        android:id="@+id/textView39"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/outfit_semi_bold"
+        android:text="Password"
+        android:textColor="@color/primaryText"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
         app:layout_constraintTop_toBottomOf="@+id/etEditProfileEmail" />
 
-    <ImageView
-        android:id="@+id/imEditUsername"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
+    <EditText
+        android:id="@+id/etEditProfilePassword"
+        android:layout_width="320dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/edit_icon"
-        app:layout_constraintStart_toEndOf="@+id/etEditProfileUsername"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        android:background="@drawable/text_field_bg_grey"
+        android:ems="10"
+        android:fontFamily="@font/poppins_light"
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toBottomOf="@+id/textView39" />
 
-    <ImageView
-        android:id="@+id/imEditEmail"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="20dp"
+
+    <Button
+        android:id="@+id/btnEditProfileEmail"
+        android:layout_width="150dp"
+        android:layout_height="45dp"
         android:layout_marginTop="10dp"
-        android:src="@drawable/edit_icon"
-        app:layout_constraintStart_toEndOf="@+id/etEditProfileEmail"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        android:backgroundTint="@color/primary"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Save Changes"
+        android:textColor="@color/btnText"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="@+id/etEditProfilePassword"
+        app:layout_constraintStart_toStartOf="@+id/etEditProfilePassword"
+        app:layout_constraintTop_toBottomOf="@+id/etEditProfilePassword" />
+
+    <ProgressBar
+        android:id="@+id/pbEditProfileUsername"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:progressDrawable="@drawable/circle_progress_bar_primary"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toBottomOf="@+id/etEditProfileUsername" />
+
+    <ProgressBar
+        android:id="@+id/pbEditProfileEmail"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:progressDrawable="@drawable/circle_progress_bar_primary"
+        app:layout_constraintEnd_toEndOf="@+id/imEditProfileBack"
+        app:layout_constraintStart_toStartOf="@+id/imEditProfileBack"
+        app:layout_constraintTop_toBottomOf="@+id/etEditProfilePassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
