--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,15 @@
     <color name="backgroundColor">#EDEDED</color>
     <color name="btnCancelColor">#FF5757</color>
 
-    <color name="primarySecond">#FFBD80</color>
-    <color name="primaryThird">#99FF80</color>
+<!--    Secondary Theme -->
+    <color name="orange">#FFBD80</color>
+    <color name="orangeDark">#EBA747</color>
+    <color name="orangeText">#FFBD80</color>
+    <color name="orangeDarkText">#EBA747</color>
+
+<!--    Third Theme -->
+    <color name="green">#99FF80</color>
+    <color name="greenDark">#68EB47</color>
+    <color name="greenText">#99FF80</color>
+    <color name="greenDarkText">#68EB47</color>
 </resources>
